Added some things

--- a/exchanges.html
+++ b/exchanges.html
@@ -4,42 +4,103 @@
         <title>Project 0: Upper School</title>
     </head>
     <body>
-        <h1 style="color:red;text-align: center;">Welcome to Upper Intercâmbios!</h1>
+      <div class="alert alert-danger" role="alert">
+         <h1 style="color:red;text-align:center;">Partnerships</h1>
+      </div>
     </body>
     <head>
         <title>Project 0: Upper School</title>
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-            <style>
-            div {
-                font-family: Arial, sans-serif;
-                font-size: 14px;
-                font-weight: bold;
-                text-align: center;
-}
-      .row > div {
-                padding: 20px;
-                background-color: orange;
-                border: 2px solid black;
-                text-align: center;
-}
-          </style>
-      </head>
-      <body>
-          <div class="container">
-              <div class="row">
-                  <div class="col-3">
-                    <a href="index.html">Home</a>
-                  </div>
-                  <div class="col-3">
-                    <a href="exchanges.html">Exchanges</a>
+            <link rel="stylesheet" href=Inheritance.css>
+            </head>
+            <body>
+               <div class="container">
+                    <div class="row">
+                        <div class="col-lg-3 col-sm-6">
+                          <a href="index.html">Home</a>
+                        </div>
+                        <div class="col-lg-3 col-sm-6">
+                          <a href="courses.html">Courses</a>
+                          </div>
+                        <div class="col-lg-3 col-sm-6">
+                            <a href="exchanges.html">Exchages</a>
+                        </div>
+                        <div class="col-lg-3 col-sm-6">
+                            <a href="partnerships.html">Partnerships</a>
+                        </div>
                     </div>
-                  <div class="col-3">
-                      This is a third section.
-                  </div>
-                  <div class="col-3">
-                      This is a fourth section.
-                  </div>
-              </div>
-          </div>
-      </body>
+                </div>
+            </body>
+      </html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Project 0: Upper School</title>
+    <link rel="stylesheet" href="variables.css">
+   </head>
+   <body> <p>
+        <h2>U.S.A: Going to New York with @IEX</h2>
+    </p> </body>
+        <style>
+        @media print {
+          .screen only  {
+              display: none;
+          }
+        }
+        div {
+          text-align: center;
+          color: black;
+        }
+        </style>
+      <div><p>Investors Exchange (IEX) is a stock exchange based in the United States. It was founded in 2012 and launched as a national securities exchange in September 2016. On October 24, 2017,
+         IEX received regulatory approval from the SEC to list companies. IEX listed its first public company, Interactive Brokers, on October 5, 2018. The exchange said that companies would be
+         able to list for free for the first five years, before a flat annual rate of $50,000. On September 23, 2019 it announced it was exiting its listing business.
+       </p></div>
+       <div><p>
+         In September 2019, IEX announced that Co-founder and COO John Schwall would retire from the company by the end of 2019.
+       </p></div>
+    </head>
+    <body>
+        <div class="teste"><table>
+            <tr>
+                <th>4 Months</th>
+                <th>6 Months</th>
+                <th>12 Months</th>
+            </tr>
+            <tr>
+                <td>$500 for week</td>
+                <td>$1800 for week</td>
+                <td>$3500 for week</td>
+            </tr>
+        </table></div>
+           <body><p>
+                <h2>Canada: Going to Toronto with @Experiencescanada</h2>
+            </p></body>
+        <style>
+        div {
+          text-align: center;
+          color: black;
+        }
+        </style>
+      <div><p>Experiences Canada offers youth exchanges for participants aged 12 to 17 years old. The exchanges are organized between groups of 10 to 30 young people. By discovering a new community, young people deepen their knowledge of a second language, become aware of a new culture, remove social barriers, form new friendships, and develop greater self-confidence. Youth Exchanges Canada is an enriching educational exchange program that encourages participants to learn and gives them the opportunity to live life changing experiences. Join the 4,500 youth who participate each year in the Experiences Canada Youth Exchange Program.
+       </p></div>
+       <div><p>
+         In September 2019, @ announced that Co-founder and COO GamesEduUu would retire from the company by the end of 2020.
+       </p></div>
+     </body>
+    </head>
+    <body>
+        <p><div class="teste"><table>
+            <tr>
+                <th>5 Months</th>
+                <th>10 Months</th>
+                <th>22 Months</th>
+            </tr>
+            <tr>
+                <td>$1000 for week</td>
+                <td>$2300 for week</td>
+                <td>$5000 for week</td>
+            </tr>
+        </table></div></p>
+    </link> </body>
 </html>
