--- a/index.html
+++ b/index.html
@@ -2,92 +2,66 @@
 <html>
     <head>
         <title>Project 0: Upper School</title>
-        <link rel"stylesheet" href="inheritance.css">
     </head>
     <body>
-        <div class="success"> <h1 style="color:red;text-align:center;">Welcome to Upper Intercâmbios!</h1> </div>
+      <div class="alert alert-danger" role="alert">
+         <h1 style="color:red;text-align:center;">Partnerships</h1>
+      </div>
     </body>
     <head>
         <title>Project 0: Upper School</title>
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-            <style>
-            .success {
-                font-family: sans-serif;
-                font-size: 18px;
-                font-weight: bold;
-                border: 1px solid red;
-                padding: 20px;
-                margin: 20px; }
-
-            .success {
-              background-color: black; }
-            div {
-                font-family: Arial, sans-serif;
-                font-size: 14px;
-                font-weight: bold;
-                text-align: center;
-}
-      .row > div {
-                padding: 20px;
-                background-color: orange;
-                border: 2px solid black;
-                text-align: center;
-                }
-          </style>
-      </head>
-      <body>
-         <div class="container">
-              <div class="row">
-                  <div class="col-3">
-                    <a href="index.html">Home</a>
-                  </div>
-                  <div class="col-3">
-                    <a href="exchanges.html">Exchanges</a>
+            <link rel="stylesheet" href=Inheritance.css>
+            </head>
+            <body>
+               <div class="container">
+                    <div class="row">
+                        <div class="col-lg-3 col-sm-6">
+                          <a href="index.html">Home</a>
+                        </div>
+                        <div class="col-lg-3 col-sm-6">
+                          <a href="courses.html">Courses</a>
+                          </div>
+                        <div class="col-lg-3 col-sm-6">
+                            <a href="exchanges.html">Exchages</a>
+                        </div>
+                        <div class="col-lg-3 col-sm-6">
+                            <a href="partnerships.html">Partnerships</a>
+                        </div>
                     </div>
-                  <div class="col-3">
-                      This is a third section.
-                  </div>
-                  <div class="col-3">
-                      This is a fourth section.
-                  </div>
-              </div>
-          </div>
-      </body>
-</html>
-
+                </div>
+            </body>
+      </html>
 <!DOCTYPE html>
 <html>
   <head>
     <title>Project 0: Upper School</title>
     <style>
-        h2 {
-          color: black;
-          text-align: center;
-          margin: 20px;
-          padding: 20px;
-    }
+    h2 {
+      color: black;
+      text-align: center;
+      margin: 20px;
+      padding: 20px;
+      height: 50px;
+}
     </style>
    </head>
    <body>
-      <h2>About Upper</h2>
+        <h2>About Upper</h2>
     </body>
 </html>
 
-<!DOCTYPE html>
-<html>
     <head>
         <title>Project 0: Upper School</title>
         <style>
-           @media print {
-             .screen only  {
-                 display: none;
-             }
-           }
+        @media print {
+          .screen only  {
+              display: none;
+          }
+        }
         </style>
     </head>
-    <body>
-      <p> <div>
-         Upper is an English school, founded in 1999 that helps thousands and thousands of people to improve their English, and have a great experience when traveling abroad.
+         <p align="center"> <div>Upper is an English school, founded in 1999 that helps thousands and thousands of people to improve their English, and have a great experience when traveling abroad.
          We hope that the work our students do in English is enjoyed and strive to ensure that our curriculum offers a rich and diverse range of learning experiences.
          We are a team where each member enriches the department by their own contributions, strengths, and experience. It isthis sense of teamwork and willingness that enables us to face the challenges of teaching with confidence and enthusiasm.
       </p> </div>
@@ -99,14 +73,19 @@
     <head>
         <title>Project 0: Upper School</title>
         <style>
+        @media print {
+          .screen only  {
+              display: none;
+          }
+        }
       div.box {
          text-align: center
       }
   </style>
         </head>
         <body>
-          <div class="box">
-          <img src="https://image.freepik.com/fotos-gratis/estados-unidos-da-america-pequena-bandeira-na-mesa-de-reuniao_41451-309.jpg"
-          </div>
+          <p><div class="box">
+          <img src="https://image.freepik.com/fotos-gratis/estados-unidos-da-america-pequena-bandeira-na-mesa-de-reuniao_41451-309.jpg">
+        </div></p>
      </body>
 </html>
