--- a/courses.html
+++ b/courses.html
@@ -5,7 +5,7 @@
     </head>
     <body>
       <div class="alert alert-danger" role="alert">
-         <h1 style="color:red;text-align:center;">Partnerships</h1>
+         <h1 style="color:red;text-align:center;">Coursess</h1>
       </div>
     </body>
     <head>
